@@ -10,7 +10,6 @@ sqitch-engine-usage - Sqitch engine usage statement
   sqitch engine alter <name> [engine-options]
   sqitch engine remove <name>
   sqitch engine show <name>
-  sqitch engine update-config
 
 =head1 Options
 
