@@ -10,7 +10,6 @@ sqitch-engine - Manage database engine configuration
   sqitch engine alter <name> [engine-options]
   sqitch engine remove <name>
   sqitch engine show <name>
-  sqitch engine update-config
 
 =head1 Description
 
@@ -251,11 +250,6 @@ and script directories will not be affected.
 Gives some information about the engine C<< <name> >>, including the
 associated properties. Specify multiple engine names to see information for
 each.
-
-=head2 C<update-config>
-
-Update the configuration from a configuration file that predates the addition
-of the C<engine> command to Sqitch.
 
 =head1 Configuration Variables
 
