@@ -17,6 +17,9 @@ Revision history for Perl extension App::Sqitch
      - Added explicit sorting for aggregated lists (such as the tags associated
        with a commit) to the MySQL, Exasol, Snowflake, and Postgres (8.4 and
        higher) engines.
+     - Removed the `sqitch engine update-config` action, originally added for
+       compatibility reasons in 2014, and no prompt to use it since 0.9999
+       in 2019.
 
 1.2.1  2021-12-05T19:59:45Z
      - Updated all the live engine tests, aside from Oracle, to test with
